--- a/index.html
+++ b/index.html
@@ -997,25 +997,47 @@ ${generatedCode}
   }
 
   function buildReactPreview(code) {
-    // Strip imports and 'use client' — let Babel handle TypeScript
-    let cleaned = code
-      // Rewrite icon library imports to use __iconProxy (before stripping)
-      .replace(/import\s*\{([^}]+)\}\s*from\s*['"](?:lucide-react|lucide|@phosphor-icons\/react|phosphor-react|hugeicons-react|@hugeicons\/react)['"]\s*;?/g, 'const {$1} = __iconProxy;')
-      // Remove remaining import lines
-      .replace(/^import\s+.*$/gm, '')
-      // Remove 'use client' directive
-      .replace(/^['"]use client['"];?\s*/gm, '')
-      // Rewrite "export default ComponentName" at end to exports.default assignment
-      .replace(/^export\s+default\s+(\w+)\s*;?\s*$/gm, 'exports.default = $1;')
-      // Rewrite "export default function/const" to declaration + export
-      .replace(/^export\s+default\s+(function\s+(\w+))/gm, '$1')
-      .replace(/^export\s+default\s+(const\s+(\w+))/gm, '$1')
-      .replace(/^export\s+default\s+(class\s+(\w+))/gm, '$1')
-      // Change "export function/const" to just "function/const"
-      .replace(/^export\s+(function|const|class|interface|type)/gm, '$1')
-      // Remove redeclarations of injected globals (Link, Image, cn, clsx, etc.)
-      .replace(/^(?:const|let|var|function)\s+(?:Link|Image|cn|clsx)\b.*$/gm, '// (stubbed)')
-      .trim();
+    let cleaned = code;
+
+    // 1. Remove directives first (they're always at the top)
+    cleaned = cleaned.replace(/^['"]use client['"];?\s*/gm, '');
+    cleaned = cleaned.replace(/^['"]use server['"];?\s*/gm, '');
+
+    // 2. Process line by line to handle imports cleanly
+    cleaned = cleaned.split('\n').map(function(line) {
+      var trimmed = line.trim();
+
+      // Icon library imports → __iconProxy destructure
+      var iconMatch = trimmed.match(/^import\s*\{([^}]+)\}\s*from\s*['"](?:lucide-react|lucide|@phosphor-icons\/react|phosphor-react|hugeicons-react|@hugeicons\/react)['"]\s*;?\s*$/);
+      if (iconMatch) return 'const {' + iconMatch[1] + '} = __iconProxy;';
+
+      // Framer-motion imports → motion stubs
+      var motionMatch = trimmed.match(/^import\s*\{([^}]+)\}\s*from\s*['"]framer-motion['"]\s*;?\s*$/);
+      if (motionMatch) return 'const {' + motionMatch[1] + '} = __motionProxy;';
+
+      // All other imports → remove
+      if (/^import\s+/.test(trimmed)) return '';
+
+      return line;
+    }).join('\n');
+
+    // 5. Handle exports
+    // "export default ComponentName;" at end → exports.default = ComponentName
+    cleaned = cleaned.replace(/^export\s+default\s+(\w+)\s*;?\s*$/gm, 'exports.default = $1;');
+    // "export default function X" → "function X" (component detected by name later)
+    cleaned = cleaned.replace(/^export\s+default\s+(function|const|class)/gm, '$1');
+    // "export function/const/etc" → strip export keyword
+    cleaned = cleaned.replace(/^export\s+(function|const|class|interface|type)/gm, '$1');
+
+    // 6. Babel handles interface/type declarations — no need to strip
+
+    // 7. Remove redeclarations of our injected globals
+    cleaned = cleaned.replace(/^(?:const|let|var|function)\s+(?:Link|Image|cn|clsx)\s*[=(:].*/gm, '// (provided by preview)');
+
+    // 8. Remove require() calls
+    cleaned = cleaned.replace(/(?:const|let|var)\s+.*=\s*require\s*\(.*\)\s*;?/g, '');
+
+    cleaned = cleaned.trim();
 
     return `<!DOCTYPE html>
 <html><head>
@@ -1038,6 +1060,29 @@ ${generatedCode}
   const Link = (props) => React.createElement('a', {...props, href: props.href || '#'});
   const cn = (...args) => args.filter(Boolean).join(' ');
   const clsx = cn;
+
+  // Framer-motion stub — motion.div etc. just render the HTML element with style/className
+  const __motionProxy = {
+    motion: new Proxy({}, {
+      get(_, el) {
+        return function MotionElement(props) {
+          var p = Object.assign({}, props);
+          // Strip motion-specific props
+          delete p.initial; delete p.animate; delete p.exit; delete p.transition;
+          delete p.whileHover; delete p.whileInView; delete p.whileTap; delete p.whileFocus;
+          delete p.variants; delete p.viewport; delete p.layout; delete p.layoutId;
+          return React.createElement(el, p);
+        };
+      }
+    }),
+    AnimatePresence: (props) => React.createElement(React.Fragment, null, props.children),
+    useAnimation: () => ({}),
+    useInView: () => [null, true],
+    useScroll: () => ({ scrollY: { get: () => 0 }, scrollYProgress: { get: () => 0 } }),
+    useTransform: (v, i, o) => ({ get: () => (o && o[0]) || 0 }),
+    useMotionValue: (v) => ({ get: () => v, set: () => {} }),
+    useSpring: (v) => v,
+  };
 
   // Universal icon stub — renders a clean placeholder SVG for any icon library import
   const __iconProxy = new Proxy({}, {
@@ -1092,12 +1137,15 @@ try {
   var __autoExport = __componentNames.length > 0
     ? '\\nif (!exports.default) { try { exports.default = ' + __componentNames[__componentNames.length - 1] + '; } catch(e) {} }'
     : '';
-  var __fn = new Function('React', 'ReactDOM', 'useState', 'useEffect', 'useRef', 'useMemo', 'useCallback', 'Fragment', 'Image', 'Link', 'cn', 'clsx', '__iconProxy', 'var exports = {};\\n' + __result.code + __autoExport + ';\\nreturn exports;');
   var __cn = function() { return Array.from(arguments).filter(Boolean).join(' '); };
+  var __imgStub = function Image(props) { return React.createElement('img', Object.assign({}, props, {src: props.src || ''})); };
+  var __linkStub = function Link(props) { return React.createElement('a', Object.assign({}, props, {href: props.href || '#'}), props.children); };
+  var __fn = new Function('React', 'ReactDOM', 'useState', 'useEffect', 'useRef', 'useMemo', 'useCallback', 'Fragment', 'Image', 'Link', 'cn', 'clsx', '__iconProxy', '__motionProxy', 'motion', 'AnimatePresence', 'useAnimation', 'useInView', 'useScroll', 'useTransform', 'useMotionValue', 'useSpring', 'var exports = {};\\n' + __result.code + __autoExport + ';\\nreturn exports;');
   var __exports = __fn(React, ReactDOM, React.useState, React.useEffect, React.useRef, React.useMemo, React.useCallback, React.Fragment,
-    function Image(props) { return React.createElement('img', Object.assign({}, props, {src: props.src || ''})); },
-    function Link(props) { return React.createElement('a', Object.assign({}, props, {href: props.href || '#'}), props.children); },
-    __cn, __cn, __iconProxy
+    __imgStub, __linkStub, __cn, __cn, __iconProxy,
+    __motionProxy, __motionProxy.motion, __motionProxy.AnimatePresence,
+    __motionProxy.useAnimation, __motionProxy.useInView, __motionProxy.useScroll,
+    __motionProxy.useTransform, __motionProxy.useMotionValue, __motionProxy.useSpring
   );
   
   // Find the component to render — check exports.default or find last capitalized function
