fix: collapse multi-line imports before processing

--- a/index.html
+++ b/index.html
@@ -1053,6 +1053,11 @@ ${generatedCode}
     cleaned = cleaned.replace(/^['"]use client['"];?\s*/gm, '');
     cleaned = cleaned.replace(/^['"]use server['"];?\s*/gm, '');
 
+    // 1.5. Collapse multi-line imports into single lines
+    cleaned = cleaned.replace(/^(import\s*\{[^}]*?)(\n[^}]*?)*(\}\s*from\s*['"][^'"]+['"];?\s*)$/gm, function(match) {
+      return match.replace(/\n\s*/g, ' ').trim();
+    });
+
     // 2. Process line by line to handle imports cleanly
     cleaned = cleaned.split('\n').map(function(line) {
       var trimmed = line.trim();
