revert: restore claude-opus-4-6 model

--- a/index.html
+++ b/index.html
@@ -1418,7 +1418,7 @@ Rules:
           'anthropic-dangerous-direct-browser-access': 'true'
         },
         body: JSON.stringify({
-          model: 'claude-sonnet-4-20250514',
+          model: 'claude-opus-4-6',
           max_tokens: 16000,
           system: systemPrompt,
           messages: [{
